// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils test getDaysOfMonth weeks start with FRIDAY 1`] = `
Object {
  "days": 
|     FRIDAY |   SATURDAY |     SUNDAY |     MONDAY |    TUESDAY |  WEDNESDAY |   THURSDAY |
| 2020-01-03 | 2020-01-04 | 2020-01-05 | 2020-01-06 | 2020-01-07 | 2020-01-08 | 2020-01-09 |
| 2020-01-10 | 2020-01-11 | 2020-01-12 | 2020-01-13 | 2020-01-14 | 2020-01-15 | 2020-01-16 |
| 2020-01-17 | 2020-01-18 | 2020-01-19 | 2020-01-20 | 2020-01-21 | 2020-01-22 | 2020-01-23 |
| 2020-01-24 | 2020-01-25 | 2020-01-26 | 2020-01-27 | 2020-01-28 | 2020-01-29 | 2020-01-30 |
| 2020-01-31 | 2020-02-01 | 2020-02-02 | 2020-02-03 | 2020-02-04 | 2020-02-05 | 2020-02-06 |
| 2020-02-07 | 2020-02-08 | 2020-02-09 | 2020-02-10 | 2020-02-11 | 2020-02-12 | 2020-02-13 |,
  "daysOfWeek": Array [
    "FRIDAY",
    "SATURDAY",
    "SUNDAY",
    "MONDAY",
    "TUESDAY",
    "WEDNESDAY",
    "THURSDAY",
  ],
  "month": 2020-01-01,
}
`;

exports[`utils test getDaysOfMonth weeks start with MONDAY 1`] = `
Object {
  "days": 
|     MONDAY |    TUESDAY |  WEDNESDAY |   THURSDAY |     FRIDAY |   SATURDAY |     SUNDAY |
| 2019-12-30 | 2019-12-31 | 2020-01-01 | 2020-01-02 | 2020-01-03 | 2020-01-04 | 2020-01-05 |
| 2020-01-06 | 2020-01-07 | 2020-01-08 | 2020-01-09 | 2020-01-10 | 2020-01-11 | 2020-01-12 |
| 2020-01-13 | 2020-01-14 | 2020-01-15 | 2020-01-16 | 2020-01-17 | 2020-01-18 | 2020-01-19 |
| 2020-01-20 | 2020-01-21 | 2020-01-22 | 2020-01-23 | 2020-01-24 | 2020-01-25 | 2020-01-26 |
| 2020-01-27 | 2020-01-28 | 2020-01-29 | 2020-01-30 | 2020-01-31 | 2020-02-01 | 2020-02-02 |
| 2020-02-03 | 2020-02-04 | 2020-02-05 | 2020-02-06 | 2020-02-07 | 2020-02-08 | 2020-02-09 |,
  "daysOfWeek": Array [
    "MONDAY",
    "TUESDAY",
    "WEDNESDAY",
    "THURSDAY",
    "FRIDAY",
    "SATURDAY",
    "SUNDAY",
  ],
  "month": 2020-01-01,
}
`;

exports[`utils test getDaysOfMonth weeks start with SATURDAY 1`] = `
Object {
  "days": 
|   SATURDAY |     SUNDAY |     MONDAY |    TUESDAY |  WEDNESDAY |   THURSDAY |     FRIDAY |
| 2020-01-04 | 2020-01-05 | 2020-01-06 | 2020-01-07 | 2020-01-08 | 2020-01-09 | 2020-01-10 |
| 2020-01-11 | 2020-01-12 | 2020-01-13 | 2020-01-14 | 2020-01-15 | 2020-01-16 | 2020-01-17 |
| 2020-01-18 | 2020-01-19 | 2020-01-20 | 2020-01-21 | 2020-01-22 | 2020-01-23 | 2020-01-24 |
| 2020-01-25 | 2020-01-26 | 2020-01-27 | 2020-01-28 | 2020-01-29 | 2020-01-30 | 2020-01-31 |
| 2020-02-01 | 2020-02-02 | 2020-02-03 | 2020-02-04 | 2020-02-05 | 2020-02-06 | 2020-02-07 |
| 2020-02-08 | 2020-02-09 | 2020-02-10 | 2020-02-11 | 2020-02-12 | 2020-02-13 | 2020-02-14 |,
  "daysOfWeek": Array [
    "SATURDAY",
    "SUNDAY",
    "MONDAY",
    "TUESDAY",
    "WEDNESDAY",
    "THURSDAY",
    "FRIDAY",
  ],
  "month": 2020-01-01,
}
`;

exports[`utils test getDaysOfMonth weeks start with SUNDAY 1`] = `
Object {
  "days": 
|     SUNDAY |     MONDAY |    TUESDAY |  WEDNESDAY |   THURSDAY |     FRIDAY |   SATURDAY |
| 2019-12-29 | 2019-12-30 | 2019-12-31 | 2020-01-01 | 2020-01-02 | 2020-01-03 | 2020-01-04 |
| 2020-01-05 | 2020-01-06 | 2020-01-07 | 2020-01-08 | 2020-01-09 | 2020-01-10 | 2020-01-11 |
| 2020-01-12 | 2020-01-13 | 2020-01-14 | 2020-01-15 | 2020-01-16 | 2020-01-17 | 2020-01-18 |
| 2020-01-19 | 2020-01-20 | 2020-01-21 | 2020-01-22 | 2020-01-23 | 2020-01-24 | 2020-01-25 |
| 2020-01-26 | 2020-01-27 | 2020-01-28 | 2020-01-29 | 2020-01-30 | 2020-01-31 | 2020-02-01 |
| 2020-02-02 | 2020-02-03 | 2020-02-04 | 2020-02-05 | 2020-02-06 | 2020-02-07 | 2020-02-08 |,
  "daysOfWeek": Array [
    "SUNDAY",
    "MONDAY",
    "TUESDAY",
    "WEDNESDAY",
    "THURSDAY",
    "FRIDAY",
    "SATURDAY",
  ],
  "month": 2020-01-01,
}
`;

exports[`utils test getDaysOfMonth weeks start with SUNDAY by default 1`] = `
Object {
  "days": 
|     SUNDAY |     MONDAY |    TUESDAY |  WEDNESDAY |   THURSDAY |     FRIDAY |   SATURDAY |
| 2019-12-29 | 2019-12-30 | 2019-12-31 | 2020-01-01 | 2020-01-02 | 2020-01-03 | 2020-01-04 |
| 2020-01-05 | 2020-01-06 | 2020-01-07 | 2020-01-08 | 2020-01-09 | 2020-01-10 | 2020-01-11 |
| 2020-01-12 | 2020-01-13 | 2020-01-14 | 2020-01-15 | 2020-01-16 | 2020-01-17 | 2020-01-18 |
| 2020-01-19 | 2020-01-20 | 2020-01-21 | 2020-01-22 | 2020-01-23 | 2020-01-24 | 2020-01-25 |
| 2020-01-26 | 2020-01-27 | 2020-01-28 | 2020-01-29 | 2020-01-30 | 2020-01-31 | 2020-02-01 |
| 2020-02-02 | 2020-02-03 | 2020-02-04 | 2020-02-05 | 2020-02-06 | 2020-02-07 | 2020-02-08 |,
  "daysOfWeek": Array [
    "SUNDAY",
    "MONDAY",
    "TUESDAY",
    "WEDNESDAY",
    "THURSDAY",
    "FRIDAY",
    "SATURDAY",
  ],
  "month": 2020-01-01,
}
`;

exports[`utils test getDaysOfMonth weeks start with THURSDAY 1`] = `
Object {
  "days": 
|   THURSDAY |     FRIDAY |   SATURDAY |     SUNDAY |     MONDAY |    TUESDAY |  WEDNESDAY |
| 2020-01-02 | 2020-01-03 | 2020-01-04 | 2020-01-05 | 2020-01-06 | 2020-01-07 | 2020-01-08 |
| 2020-01-09 | 2020-01-10 | 2020-01-11 | 2020-01-12 | 2020-01-13 | 2020-01-14 | 2020-01-15 |
| 2020-01-16 | 2020-01-17 | 2020-01-18 | 2020-01-19 | 2020-01-20 | 2020-01-21 | 2020-01-22 |
| 2020-01-23 | 2020-01-24 | 2020-01-25 | 2020-01-26 | 2020-01-27 | 2020-01-28 | 2020-01-29 |
| 2020-01-30 | 2020-01-31 | 2020-02-01 | 2020-02-02 | 2020-02-03 | 2020-02-04 | 2020-02-05 |
| 2020-02-06 | 2020-02-07 | 2020-02-08 | 2020-02-09 | 2020-02-10 | 2020-02-11 | 2020-02-12 |,
  "daysOfWeek": Array [
    "THURSDAY",
    "FRIDAY",
    "SATURDAY",
    "SUNDAY",
    "MONDAY",
    "TUESDAY",
    "WEDNESDAY",
  ],
  "month": 2020-01-01,
}
`;

exports[`utils test getDaysOfMonth weeks start with TUESDAY 1`] = `
Object {
  "days": 
|    TUESDAY |  WEDNESDAY |   THURSDAY |     FRIDAY |   SATURDAY |     SUNDAY |     MONDAY |
| 2019-12-31 | 2020-01-01 | 2020-01-02 | 2020-01-03 | 2020-01-04 | 2020-01-05 | 2020-01-06 |
| 2020-01-07 | 2020-01-08 | 2020-01-09 | 2020-01-10 | 2020-01-11 | 2020-01-12 | 2020-01-13 |
| 2020-01-14 | 2020-01-15 | 2020-01-16 | 2020-01-17 | 2020-01-18 | 2020-01-19 | 2020-01-20 |
| 2020-01-21 | 2020-01-22 | 2020-01-23 | 2020-01-24 | 2020-01-25 | 2020-01-26 | 2020-01-27 |
| 2020-01-28 | 2020-01-29 | 2020-01-30 | 2020-01-31 | 2020-02-01 | 2020-02-02 | 2020-02-03 |
| 2020-02-04 | 2020-02-05 | 2020-02-06 | 2020-02-07 | 2020-02-08 | 2020-02-09 | 2020-02-10 |,
  "daysOfWeek": Array [
    "TUESDAY",
    "WEDNESDAY",
    "THURSDAY",
    "FRIDAY",
    "SATURDAY",
    "SUNDAY",
    "MONDAY",
  ],
  "month": 2020-01-01,
}
`;

exports[`utils test getDaysOfMonth weeks start with WEDNESDAY 1`] = `
Object {
  "days": 
|  WEDNESDAY |   THURSDAY |     FRIDAY |   SATURDAY |     SUNDAY |     MONDAY |    TUESDAY |
| 2020-01-01 | 2020-01-02 | 2020-01-03 | 2020-01-04 | 2020-01-05 | 2020-01-06 | 2020-01-07 |
| 2020-01-08 | 2020-01-09 | 2020-01-10 | 2020-01-11 | 2020-01-12 | 2020-01-13 | 2020-01-14 |
| 2020-01-15 | 2020-01-16 | 2020-01-17 | 2020-01-18 | 2020-01-19 | 2020-01-20 | 2020-01-21 |
| 2020-01-22 | 2020-01-23 | 2020-01-24 | 2020-01-25 | 2020-01-26 | 2020-01-27 | 2020-01-28 |
| 2020-01-29 | 2020-01-30 | 2020-01-31 | 2020-02-01 | 2020-02-02 | 2020-02-03 | 2020-02-04 |
| 2020-02-05 | 2020-02-06 | 2020-02-07 | 2020-02-08 | 2020-02-09 | 2020-02-10 | 2020-02-11 |,
  "daysOfWeek": Array [
    "WEDNESDAY",
    "THURSDAY",
    "FRIDAY",
    "SATURDAY",
    "SUNDAY",
    "MONDAY",
    "TUESDAY",
  ],
  "month": 2020-01-01,
}
`;

exports[`utils test getDaysOfRangeMonth works without startDate and endDate 1`] = `
Object {
  "daysOfWeek": Array [
    "SUNDAY",
    "MONDAY",
    "TUESDAY",
    "WEDNESDAY",
    "THURSDAY",
    "FRIDAY",
    "SATURDAY",
  ],
  "months":          S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S
Jan =>     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |    
Feb =>     |     |     |     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |     |     |     |     |     |     |    
Mar =>  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |     |     |     |    
Apr =>     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |     |     |     |     |     |     |     |     |    
May =>     |     |     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |    
Jun =>     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |     |     |     |     |     |     |     |     |     |     |    
Jul =>     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |    
Aug =>     |     |     |     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |    
Sep =>     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |     |     |     |     |     |     |     |     |     |    
Oct =>     |     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |    
Nov =>  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |     |     |     |     |     |     |     |     |     |     |     |    
Dec =>     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |     |    ,
}
`;
